# zoomzoomtaco

./: .gitignore  .output.cpp.~undo-tree~  .temp.s.~undo-tree~  CMakeLists.txt  CTestTestfile.cmake  README.md  compile_all  compile_pochi  compile_taco  debug_pochi  debug_taco  enter_docker  gen_callables.py  output.cpp  reference.cpp  res  test_pochi  test_taco  update.sh
PochiVM/: CMakeLists.txt  test_taco_if.cpp  test_util_helper.h
PochiVM/dockerfile/: Dockerfile
PochiVM/docs/: intro.html  lang_construct.html
PochiVM/fastinterp/: CMakeLists.txt  build_fast_interp_lib.cpp  fastinterp_mem2reg_helper.h  fastinterp_tpl_astliteral_mcmedium.cpp  fastinterp_tpl_astliteral_mcsmall.cpp  fastinterp_tpl_incr_if_eq.cpp  fastinterp_tpl_increment.cpp  fastinterp_tpl_mem2reg_arr_idx.cpp  fastinterp_tpl_mem2reg_arr_idxplus1.cpp  fastinterp_tpl_mem2reg_comparison_int32_conditional_branch.cpp  fastinterp_tpl_mem2reg_dereference.cpp  fastinterp_tpl_mem2reg_doublearray_var_index.cpp  fastinterp_tpl_mem2reg_extract_value.cpp  fastinterp_tpl_mem2reg_increment_value.cpp  fastinterp_tpl_mem2reg_int32arrarrvaridx.cpp  fastinterp_tpl_mem2reg_int32array_var_index.cpp  fastinterp_tpl_mem2reg_ptradd.cpp  fastinterp_tpl_mem2reg_unsigned_compare.cpp  fastinterp_tpl_mem2reg_util.hpp  fastinterp_tpl_operandshape.h
PochiVM/pochivm/: CMakeLists.txt  api_base.h  api_lang_constructs.h  api_vt_base.h  arith_expr_fastinterp.cpp  ast_arithmetic_expr_type.h  ast_expr_base.h  ast_mem2reg.h  ast_type_helper.h  ast_variable.h  common_expr.h  common_expr_fastinterp.cpp  exception_helper_llvm.cpp  fastinterp_ast_helper.hpp  function_proto.h  function_proto_fastinterp.cpp  function_proto_llvm.cpp  lang_constructs.h  lang_constructs_fastinterp.cpp  logical_operator.h  mem2reg_pass.cpp  pochivm.h  pochivm_context.h  pochivm_function_pointer.h  struct.h  taco_ast.h  taco_fastinterp.cpp  taco_nodes.h
apps/: CTestTestfile.cmake
apps/tensor_times_vector/: CMakeLists.txt  CTestTestfile.cmake  add2.h  gen.s  opt_gen.c  spmv.h  taco_expr_tests.h  tensor_times_vector.cpp  testutils.h  utest.h
src/: CMakeLists.txt  CTestTestfile.cmake  format.cpp  tensor.cpp  type.cpp
src/codegen/: README.md  callables.h  codegen.cpp  codegen_c.cpp  codegen_pochi.cpp  codegen_pochi.h  compile_to_pochi.cpp  compile_to_pochi.h  compile_to_pochivt.cpp  compile_to_pochivt.h  debug.cpp  debug.h  macros.h  module.cpp  pochi_andor_visitors.cpp  pochi_arith_visitors.cpp  pochi_comparison_operators.cpp  pochi_control_flow_visitors.cpp  pochi_function_call_visitor.cpp  pochi_function_visitor.cpp  pochi_templates.h  pochi_var_visitors.cpp
src/index_notation/: index_notation.cpp
src/ir/: ir.cpp  simplify.cpp
test/: CTestTestfile.cmake
tools/: CTestTestfile.cmake
(+45 files in other folders)
